Fix console flood from blocked reflection on Java 9+ (silence IMPL_LOOKUP)
On Java 9+ (server runs Java 21) java.base does not open java.lang.invoke to
unnamed modules, so accessing MethodHandles.Lookup.IMPL_LOOKUP throws
InaccessibleObjectException. setAccessible/setFailsafeFieldValue caught it with
printStackTrace(), flooding the console on startup, on every //set|//undo (via
ExtentTraverser) and on the bStats scheduler.

Only STATIC final fields need the final bit cleared via IMPL_LOOKUP; a non-static
final field (e.g. AbstractDelegateExtent.extent) is already writable after
setAccessible(true) on Java 21. Guard the trick with Modifier.isStatic and swallow
the failure silently. Also remove a stray System.out.println in ReflectionUtils9.

Write behavior is unchanged; only the noise is removed. No --add-opens required.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>